--- a/css/projects.css
+++ b/css/projects.css
@@ -1,15 +1,22 @@
 .projectContainer {
-
+  border: 1px solid black;
+  border-radius: 6px;
+  padding: 5px;
+  display: inline-flex;
+  flex-direction: column;
+  width: 33.333%;
 }
 .projectTitle {
-
+  display: inline-block;
 }
 .projectDate {
-
+  display: inline-block;
 }
 .projectDesc {
-
+  display: inline-block;
 }
 .projectImg {
-
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
 }
