change colours 'black' to a nicer hex value

--- a/css/projects.css
+++ b/css/projects.css
@@ -1,5 +1,5 @@
 .projectContainer {
-  border: 1px solid black;
+  border: 1px solid #171717;
   border-radius: 6px;
   padding: 5px;
   display: inline-flex;
