--- a/css/master.css
+++ b/css/master.css
@@ -49,7 +49,7 @@ body {
 }
 
 .dropdown-content a {
-  color: black;
+  color: #171717;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -62,7 +62,7 @@ body {
 .footer {
   position: fixed;
   bottom: 0;
-  background-color: black;
+  background-color: #171717;
   width: 100%;
   overflow-x: hidden;
   margin-left: -8px;
@@ -142,8 +142,8 @@ body {
 
 }
 .bodyGithubLink:hover {
-  color: black;
-  text-decoration-color: black;
+  color: #171717;
+  text-decoration-color: #171717;
   cursor: pointer;
 }
 .githubLink:hover {
@@ -174,7 +174,7 @@ body {
   outline: none; /* Remove outline */
 }
 .titleText {
-  color: black;
+  color: #171717;
   font-size: 50px;
   text-align: center;
 }
