--- a/css/projects.css
+++ b/css/projects.css
@@ -8,9 +8,12 @@
 }
 .projectTitle {
   display: inline-block;
+  font-style: bold;
+  font-size: 20px;
 }
 .projectDate {
   display: inline-block;
+  color: #4d4d4d;
 }
 .projectDesc {
   display: inline-block;
@@ -19,4 +22,19 @@
   display: inline-block;
   width: 100%;
   height: auto;
+}
+@font-face {
+  font-family: cuyabra;
+  src: url(../fonts/Lato-Regular.ttf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: cuyabra;
+  src: url(../fonts/Lato-Bold.ttf);
+  font-weight: bold;
+}
+@font-face {
+  font-family: cuyabra;
+  src: url(../fonts/Lato-Italic.ttf);
+  font-style: italic;
 }
