--- a/css/projects.css
+++ b/css/projects.css
@@ -4,9 +4,10 @@
   padding: 5px;
   display: inline-flex;
   flex-direction: column;
-  width: 33.333%;
+  width: 31.3%;
   background-color: #f5f5f5;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  margin: 5px;
 }
 .projectTitle {
   display: inline-block;
