--- a/css/photography.css
+++ b/css/photography.css
@@ -12,7 +12,7 @@
   display: table;
 }
 #photoContainer  {
-
+  background-color: blue;
 }
 #photoContainer img {
   border-radius: 4% 4% 0% 0%;
@@ -74,7 +74,7 @@ div.desc {
   display: table;
   clear: both;
 }
-.modal {
+#imageModal {
  display: none;
  position: fixed;
  z-index: 1;
@@ -89,8 +89,11 @@ div.desc {
 
 .modal-content {
  background-color: #fefefe;
- margin: 15% auto;
- padding: 20px;
+ margin: 5% auto;
+ padding-top: 10px;
+ padding-bottom: 20px;
+ padding-left: 20px;
+ padding-right: 20px;
  border: 1px solid #888;
  width: 80%;
 }
